plugins {
    id 'java'
}

group 'com.ammerzon'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

task(run, dependsOn: 'classes', type: JavaExec) {
    jvmArgs "--enable-preview"
    main = 'com.ammerzon.animatedfigures.App'
    classpath = sourceSets.main.runtimeClasspath
    classpath += sourceSets.main.resources
}

test {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}